--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
 
         <div class="main-content">
+            <span>"</span>
             <div class="text-area">
                 <span class="qoute">
                     “Love all, trust a few, do wrong to none.
